# seals-ml

./: .gitignore  LICENSE  README.md  environment.yml  environment_2024-05-15.yml  environment_2024-05-15_cpu.yml  environment_gpu.yml  pyproject.toml  requirements.txt  setup.py
config/: generate_training_data.yaml  generate_training_data_bjt.yaml  seals_echo.yaml  train_transformer.yaml  train_transformer_bjt.yaml
data/: Dataset_cleanup.ipynb  generate_data.py
notebooks/: CAMS_bjt_npl_v10.ipynb  CAMS_bjt_npl_v11.ipynb  CAMS_bjt_npl_v12.ipynb  CAMS_bjt_npl_v16.ipynb  CAMS_bjt_npl_v17.ipynb  CAMS_bjt_npl_v17a.ipynb  CAMS_bjt_npl_v20.ipynb  CAMS_bjt_npl_v21.ipynb  CAMS_bjt_npl_v22.ipynb  CAMS_bjt_npl_v25.ipynb  CAMS_bjt_npl_v30.ipynb  CAMS_bjt_npl_v31.ipynb  CAMS_bjt_npl_v7.ipynb  CAMS_bjt_npl_v8.ipynb  CAMS_bjt_npl_v9c.ipynb  Geometry_addition.ipynb  Interpolator_speed_test.ipynb  SEALS_backtrack_testing.ipynb  SEALS_interpolator.ipynb  SEALS_interpolator_GaussianProcesses.ipynb  SEALS_interpolator_newdata.ipynb  SEALS_interpolator_test.ipynb  dj_initial_exploration.ipynb  exploration.ipynb  exploration_MLtransformer_NoEquipment.ipynb  feature_importance.ipynb  guaranteed_plume_comparison.ipynb  jeremy_transformer_verification.ipynb  minimum_distance_test.ipynb  model_evaluation.ipynb  model_explanations.ipynb  seals_validation_case_plots.ipynb  utils__test_testing.ipynb  utils_testing.ipynb  verify_sampler.ipynb  verify_sampler_local_TPM.ipynb
scripts/: NOTES  distributed_scaling.py  generate_data.py  merge_eval.py  post_proc.sh  post_process.py  submit_data_gen.sh  submit_scaler.sh  (+8 more)
(+27 files in other folders)
